--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,10 +1,36 @@
 input {
+	gelf {
+		port => 5000
+	}
 	tcp {
 		port => 5000
+	}
+	http {
+		port => 5001
+		codec => json {
+    	}
+		type => "web"
 	}
 }
 
 ## Add your filters / logstash plugins configuration here
+filter {
+	if [type] == "web" {
+		mutate {
+			rename => { "@tags" => "tags" }
+		}
+	}
+	ruby{
+    	code => "event.set('kst_timestamp', event.get('@timestamp').time.localtime('+09:00').strftime('%Y-%m-%d %H:%M:%S'))"
+    }
+
+	date { 
+		locale => 'ko'
+		match => ['kst_timestamp', 'YYYY-MM-DD HH:mm:ss'] 
+		target => 'ko_date'  
+		timezone => 'Asia/Seoul'
+	}
+}
 
 output {
 	elasticsearch {
@@ -13,3 +39,4 @@ output {
 		password => "changeme"
 	}
 }
+
